Nuevos elementos añadidos

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="Texto">
     <h1>Hola, Soy <br>Juliana!</h1>
-    <p>Mi nombre es Juliana Pérez Chavarría, <br> nací el 19 de abril del 2006 y tengo 19 años</p>
+    <p>Mi nombre es Juliana Pérez Chavarría, <br> nací el 19 de abril del 2006 y tengo 19 años.</p>
     </div>
 
     <img src="./IMG/FOTO_JULI_FILTRO.png" alt="FOTO_JULI" class="Foto_Juli">
